# json

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  vix.json
.github/: pull_request_template.md
.github/workflows/: json-strict-ci.yml
benchmarks/: CMakeLists.txt  README.md  json_build_bench.cpp  json_convert_bench.cpp  json_dumps_bench.cpp  json_jpath_bench.cpp  json_loads_bench.cpp  json_simple_bench.cpp
benchmarks/results/: json_build_bench.md  json_convert_bench.md  json_dumps_bench.md  json_jpath_bench.md  json_loads_bench.md  json_simple_bench.md  vix_json_simple_bench_simple_vs_nlohmann.md
cmake/: vix_jsonConfig.cmake.in
examples/: CMakeLists.txt  builders.cpp  io.cpp  jpath.cpp  quick_start.cpp
examples/json_simple/: CMakeLists.txt
include/vix/json/: Simple.hpp  build.hpp  convert.hpp  dumps.hpp  jpath.hpp  json.hpp  loads.hpp
scripts/: test.sh
tests/: CMakeLists.txt  json_build_test.cpp  json_convert_test.cpp  json_dumps_test.cpp  json_include_test.cpp  json_jpath_test.cpp  json_loads_test.cpp  json_simple_test.cpp
